# rs-api

./: .env.example  .gitignore  Cargo.toml  Makefile  Migrant.toml  README.md  Rocket.toml  log4rs.yml  log4rs_prod.yml
migrations/20190328214445_100-init/: up.sql
src/: main.rs
src/controllers/: users_controller.rs
src/db/: mod.rs  users_db.rs
src/routes/: auth.rs  mod.rs  user.rs
src/utils/: jwt.rs  mod.rs  time.rs
