[package]
name = "api"
version = "0.1.0"
authors = ["Benjamin Hartley <bsh.guitar@gmail.com>"]
edition = "2018"

[dependencies]
bcrypt = "0.3.0"
dotenv = "0.13.0"
jsonwebtoken = "5.0.1"
lazy_static = "1.3.0"
log = "0.4.6"
log4rs = "0.8.3"
postgres = "0.15.2"
r2d2 = "0.8.3"
r2d2_postgres = "0.14.0"
rocket = "0.4.0"
rocket_contrib = "0.4.0"
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"
